refactor(plugin): hoist renderPreviews classpath/JVM-args helpers (P0.3)
Extracts the renderPreviews test classpath construction, the static JVM
open flags, and the static system-property set out of the inline
`project.tasks.register("renderPreviews", Test::class.java) { ... }`
block in AndroidPreviewSupport.kt into a new package-private helper file
`AndroidPreviewClasspath.kt`.

Why: the upcoming preview daemon (docs/daemon/DESIGN.md) needs to
construct the same classpath / JVM args / sysprops to launch its own
JVM. Sharing the construction logic now means we don't duplicate the
inline DSL block when wiring the DaemonBootstrapTask.

Each helper returns data (FileCollection / List / Map). None call Test
DSL methods. The Test task lambda still:
  - composes the final classpath (it appends AGP unit-test classes /
    classpath, only resolvable late via findByName("test${Cap}UnitTest"))
  - inherits AGP's javaLauncher
  - registers the dynamic ArgumentProviders (a11y, tier) which need lazy
    Provider evaluation at task-execution time
  - copies AGP's test JVM args

Behaviour is byte-identical: file ordering, JVM-arg ordering, and
sysprop set match the previous inline construction. Verified by:
  - :samples:android:renderAllPreviews — pass, no PNG diffs
  - :gradle-plugin:test — pass
  - :gradle-plugin:functionalTest — pass

Also lands P0.2 wrap-up: PreviewInfo.sourceFile was already shipped, so
this PR adds the missing functional-test guard
(DiscoveryFunctionalTest asserts at least one preview's sourceFile is
non-blank) and marks both P0.2 and P0.3 done in docs/daemon/TODO.md.